--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   http: ^0.12.2
   shared_preferences: ^0.5.12
-  settings_ui: ^0.4.0
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
