--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.2
   shared_preferences: ^0.5.12
   intl: ^0.16.1
+  provider: ^4.3.2+2
 
 
   # The following adds the Cupertino Icons font to your application.
